fix: menu scrollbar when mouse operating

--- a/style/web/components/menu/_index.less
+++ b/style/web/components/menu/_index.less
@@ -449,10 +449,6 @@ a.@{prefix}-menu__item {
     }
   }
 
-  &::-webkit-scrollbar {
-    display: none;
-  }
-
   &__spacer {
     &::before {
       content: "";
